<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo" />

    <EditText
        android:id="@+id/tituloPublicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/titulo_hint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/descripcion_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcion" />

    <EditText
        android:id="@+id/descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/descripcion_hint"
        android:inputType="textMultiLine|textPersonName"
        android:lines="3"
        android:maxLines="3" />

    <TextView
        android:id="@+id/correo_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/correo_hint"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/precio_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/precio" />

    <EditText
        android:id="@+id/precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/precio_hint"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/categoria_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria" />

    <Spinner
        android:id="@+id/spinner_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <Switch
        android:id="@+id/switch_descuento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descuento" />



    <LinearLayout
        android:id="@+id/descuento_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/progreso_seek_lbl"
            android:layout_width="40dp"
            android:layout_height="wrap_content"

            android:textAlignment="center" />

        <SeekBar
            android:id="@+id/seekBar_descuento"
            android:layout_width="320dp"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="100"
            android:textAlignment="center" />



    </LinearLayout>

    <CheckBox
        android:id="@+id/retiro_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retiro" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/direccion" />

    <EditText
        android:id="@+id/direccion_retiro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/direccion_hint"
        android:inputType="textPostalAddress" />

    <CheckBox
        android:id="@+id/terminos_checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terminos" />

    <Button
        android:id="@+id/publicar_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publicar" />


</LinearLayout>